--- a/servicos.html
+++ b/servicos.html
@@ -33,7 +33,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     <a class="nav-link active" href="servicos.html">Serviços</a>
-                    <a class="nav-link" href="#">Matrícula</a>
+                    <a class="nav-link" href="matricula.html">Matrícula</a>
                 </div>
             </div>
         </div>
