--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                     <a class="nav-link" href="servicos.html">Serviços</a>
-                    <a class="nav-link" href="#">Matrícula</a>
+                    <a class="nav-link" href="matricula.html">Matrícula</a>
                 </div>
             </div>
         </div>
